<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.account.RegisterActivity">
    <include layout="@layout/layout_toolbar" />
    <ImageView
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_marginTop="40dip"
        android:background="@mipmap/ic_launcher"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="50dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:orientation="horizontal">
    <com.system.everydayvideo.widget.ClearEditText
        android:id="@+id/et_phone"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@null"
        android:hint="@string/tv13"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:maxLength="11"
        android:textColor="@color/black"
        android:textColorHint="@color/textProfileGray"
        android:textSize="@dimen/textdx_16" />
        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textdx_14"
            android:textColor="@color/selector_get_code"
            android:enabled="false"
            android:text="@string/tv17"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@color/gray_slight"></View>
    <com.system.everydayvideo.widget.ClearEditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@null"
        android:hint="@string/tv18"
        android:imeOptions="actionDone"
        android:lines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/textProfileGray"
        android:textSize="@dimen/textdx_16" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@color/gray_slight"></View>
    <com.system.everydayvideo.widget.ClearEditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@null"
        android:hint="@string/tv14"
        android:imeOptions="actionDone"
        android:lines="1"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/textProfileGray"
        android:textSize="@dimen/textdx_16" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@color/gray_slight"></View>
    <com.system.everydayvideo.widget.ClearEditText
        android:id="@+id/et_repwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@null"
        android:hint="@string/tv15"
        android:imeOptions="actionDone"
        android:password="true"
        android:lines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/textProfileGray"
        android:textSize="@dimen/textdx_16" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:background="@color/gray_slight"></View>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:text="@string/tv16"
        android:textColor="@color/white"
        android:textSize="@dimen/textdx_16"
        android:background="@drawable/selector_login"/>
</LinearLayout>