<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.TabCategorizeFourthFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rel_user_login"
                android:layout_width="match_parent"
                android:layout_height="220dip"
                android:background="@mipmap/userbg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dip">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_img"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_marginTop="40dip"
                    android:src="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/iv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_user_img"
                    android:layout_marginTop="5dip"
                    android:gravity="center_vertical"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/tv24"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textdx_16" />

                </RelativeLayout>

               <RelativeLayout
                   android:id="@+id/rel_uservip"
                   android:layout_width="match_parent"
                   android:layout_height="40dip"
                   android:layout_marginTop="5dip"
                   android:visibility="invisible"
                   android:background="#80000000">
                   <TextView
                       android:id="@+id/tv_user_vip"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_vertical"
                       android:textSize="@dimen/textdx_14"
                       android:textColor="@color/white"
                       android:layout_centerVertical="true"
                       android:layout_marginLeft="10dip"
                       android:text="@string/tv26"
                       />
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:layout_marginRight="10dip"
                       android:layout_alignParentRight="true"
                       android:background="@mipmap/reightgo"/>
               </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:background="@color/gray_slight"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center_vertical"
                android:paddingLeft="15dip"
                android:text="@string/tv1"
                android:textColor="@color/black"
                android:textSize="@dimen/textdx_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:background="@color/gray_slight"></View>

            <cn.droidlover.xrecyclerview.XRecyclerView
                android:id="@+id/user_features_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:visibility="gone"
                app:recyclerBackgroundColor="@color/transparent"
                app:recyclerScrollbarNone="true"
                app:recyclerScrollbarStyle="outsideOverlay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dip"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userconversioncode"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg1"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />

                <View
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg2"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />

                <View
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:id="@+id/tv_usershare"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg3"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:background="@color/gray_slight"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dip"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_uservip"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg6"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv21"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />

                <View
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:id="@+id/tv_userproblem"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg4"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />

                <View
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:id="@+id/tv_userAllCache"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg5"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:background="@color/gray_slight"></View>
            <LinearLayout
                android:id="@+id/lin_thirdtab"
                android:layout_width="match_parent"
                android:layout_height="100dip"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_user_official"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg7"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv36"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:textSize="@dimen/textdx_14" />

                <View
                    android:id="@+id/v_zw1"
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:id="@+id/tv_user_ustomer_service"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg8"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv37"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14" />

                <View
                    android:id="@+id/v_zw2"
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:id="@+id/tv_invite_code"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg10"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv40"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14"
                    android:visibility="visible"/>
                <View
                    android:id="@+id/v_zw3"
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_slight"
                    android:visibility="visible"></View>

                <TextView
                    android:id="@+id/tv_user_uszw1"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg8"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv37"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14"
                    android:visibility="invisible"/>
                <View
                    android:id="@+id/v_zw4"
                    android:layout_width="0.1dip"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:background="@color/gray_slight"></View>

                <TextView
                    android:id="@+id/tv_user_uszw2"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/usertypeimg8"
                    android:gravity="center"
                    android:padding="15dip"
                    android:text="@string/tv37"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_14"
                    android:visibility="invisible"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:background="@color/gray_slight"></View>

            <TextView
                android:id="@+id/tv_useraboutus"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center"
                android:text="@string/tv7"
                android:textColor="@color/black"
                android:textSize="@dimen/textdx_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:background="@color/gray_slight"></View>

            <TextView
                android:id="@+id/tv_userlogout"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center"
                android:text="@string/tv31"
                android:textColor="@color/black"
                android:textSize="@dimen/textdx_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:background="@color/gray_slight"></View>
            <TextView
                android:id="@+id/tv_versionname"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center"
                android:text="@string/tv31"
                android:textColor="@color/black"
                android:textSize="@dimen/textdx_16" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>